--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -22,7 +22,7 @@
                 <div class="card text-white bg-warning" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Liste des Livraisons/Epéditions</h5>
-                        <p class="card-text">Voir toutes les réceptions ou les expéditions en cliquant ici</p>
+                        <p class="card-text">Voir les réceptions ou les expéditions en cliquant ici</p>
                         <a href="/delivery" class="stretched-link"></a>
                     </div>
                 </div>
