--- a/templates/delivery_schedule/new.html.twig
+++ b/templates/delivery_schedule/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
     <div class="form-style" style="padding-top: 20px; padding-bottom: 20px; text-align: center;">
-        <h1>Enregistrer une réception</h1>
+        <h1>Enregistrer une réception / expèdition</h1>
     </div>
     <div style="padding-top: 20px; padding-bottom: 20px;">
         <a class="btn btn-primary" href="{{ path('app_delivery_schedule_index') }}">Retour à la liste</a>
