--- a/templates/delivery_schedule/show.html.twig
+++ b/templates/delivery_schedule/show.html.twig
@@ -4,7 +4,24 @@
 
 {% block body %}
     <div class="container">
-        <h1>Livraison/Expédition</h1>
+    </div>
+    <div class="container">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <a class="btn btn-primary" href="{{ path('app_delivery_schedule_index') }}">Retour à la liste</a>
+                </div>
+                <div class="col-md-4">
+                    <a class="btn btn-success"
+                        href="{{ path('app_delivery_schedule_edit', {'id': delivery_schedule.id}) }}">Mofidier</a>
+                </div>
+                <div class="col-md-4">
+                    {{ include('delivery_schedule/_delete_form.html.twig') }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
         <table class="table">
             <tbody>
             
@@ -76,20 +93,5 @@
             </tbody>
         </table>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <a class="btn btn-primary" href="{{ path('app_delivery_schedule_index') }}">Retour à la liste</a>
-            </div>
-            <div class="col-md-4">
-                <a class="btn btn-success" href="{{ path('app_delivery_schedule_edit', {'id': delivery_schedule.id}) }}">Mofidier</a>
-            </div>
-            <div class="col-md-4">
-                {{ include('delivery_schedule/_delete_form.html.twig') }}
-            </div>
-        </div>
-    </div>
-
-
     
 {% endblock %}
