--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -11,40 +11,21 @@
     <div class="container" style="padding: 150px;">
         <div class="row">
             <div class="col-md-4">
-                <div class="card text-white bg-secondary" style="max-width: 20rem;"" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Calendrier </h5>
-                        
-                        <p class="card-text">Consultez le calendrier des réceptions/expéditions en cliquant ici</p>
-                    </div>
-                </div>
                 <div class="container">
-                    <input type="checkbox" name="calendar-button" id="calendar-button" onclick="location.href='/calendar'" />
-                    <label class="calendar" for="calendar-button">Voir le calendrier</label>
+                    <input type="checkbox" name="calendar-button" id="calendar-button" onclick="location.href='/register'" />
+                    <label class="calendar" for="calendar-button">Création de compte</label>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card text-white bg-secondary" style="width: 20rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Liste des Livraisons/Epéditions</h5>
-                        <p class="card-text">Voir les réceptions ou les expéditions en cliquant ici</p>
-                    </div>
-                </div>
                     <div class="container">
-                        <input type="checkbox" name="list-button" id="list-button" onclick="location.href='/delivery'"/>
-                        <label class="list" for="list-button">Voir la liste</label>
+                        <input type="checkbox" name="list-button" id="list-button" onclick="location.href='/login'"/>
+                        <label class="list" for="list-button">Connexion</label>
                     </div>
             </div>
             <div class="col-md-4">
-                <div class="card text-white bg-secondary" style="width: 20rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Création Livraison/Epédition</h5>
-                        <p class="card-text">Créer une réception ou une expédition en cliquant ici</p>
-                    </div>
-                </div>
                     <div class="container">
-                        <input type="checkbox" name="create-button" id="create-button" onclick="location.href='/delivery/new'" />
-                        <label class="create" for="create-button">livraison/expédition</label>
+                        <input type="checkbox" name="create-button" id="create-button" onclick="location.href='/logout'" />
+                        <label class="create" for="create-button">Déconnexion</label>
                     </div>
             </div>
         </div>
