--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,29 +1,149 @@
+{# navbar #}
+{% block stylesheets %}
+<link rel="stylesheet" href="{{ asset('css/nav.css') }}" />
+{% endblock %}
 {% block navbar %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{{path('app_home')}}">Menu</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto">
+<div class="tabs-to-dropdown">
+    <div class="nav-wrapper d-flex align-items-center justify-content-between">
+        <ul class="nav nav-pills d-none d-md-flex" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a class="nav-link active" id="pills-company-tab" data-toggle="pill" href="/" role="tab"
+                    aria-controls="pills-company" aria-selected="true">Accueil</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-product-tab" data-toggle="pill" href="/delivery" role="tab"
+                    aria-controls="pills-product" aria-selected="false">Liste des Livraisons / Expéditions</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-news-tab" data-toggle="pill" href="/delivery/new" role="tab"
+                    aria-controls="pills-news" aria-selected="false">Création d'une Livraison / Expédition</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="/calendar" role="tab"
+                    aria-controls="pills-contact" aria-selected="false">Calendrier des Livraisons / Expéditions</a>
+            </li>
+        </ul>        
+    </div>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('app_login')}}">Connection</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('app_register')}}">Créer un compte</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('app_delivery_schedule_index')}}">Listes des
-                        livraisons/expéditions</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{path('app_calendar')}}">Calendrier</a>
-                </li>
-            </ul>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-company" role="tabpanel" aria-labelledby="pills-company-tab">
+            <div class="container-fluid">
+            </div>
+        </div>
+        <div class="tab-pane fade" id="pills-product" role="tabpanel" aria-labelledby="pills-product-tab">
+            <div class="container-fluid">
+                
+            </div>
+        </div>
+        <div class="tab-pane fade" id="pills-news" role="tabpanel" aria-labelledby="pills-news-tab">
+            <div class="container-fluid">
+                
+            </div>
+        </div>
+        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+            <div class="container-fluid">
+                
+            </div>
         </div>
     </div>
-</nav>
+</div>
+
+<footer class="page-footer">
+    <span>Qualiservice 2022</span>
+    <a href="https://qualiservice.fr/" target="_blank">
+        <img width="24" height="24" src="https://assets.codepen.io/162656/george-martsoukos-small-logo.svg"
+            alt="George Martsoukos logo">
+    </a>
+</footer>
 {% endblock navbar %}
+
+{% block javascripts %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script>
+        const $tabsToDropdown = $(".tabs-to-dropdown");
+
+            function generateDropdownMarkup(container) {
+                const $navWrapper = container.find(".nav-wrapper");
+                const $navPills = container.find(".nav-pills");
+                const firstTextLink = $navPills.find("li:first-child a").text();
+                const $items = $navPills.find("li");
+                const markup = `
+    <div class="dropdown d-md-none">
+      <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        ${firstTextLink}
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
+        ${generateDropdownLinksMarkup($items)}
+      </div>
+    </div>
+  `;
+                $navWrapper.prepend(markup);
+            }
+
+            function generateDropdownLinksMarkup(items) {
+                let markup = "";
+                items.each(function () {
+                    const textLink = $(this).find("a").text();
+                    markup += `<a class="dropdown-item" href="#">${textLink}</a>`;
+                });
+
+                return markup;
+            }
+
+            function showDropdownHandler(e) {
+                // works also
+                //const $this = $(this);
+                const $this = $(e.target);
+                const $dropdownToggle = $this.find(".dropdown-toggle");
+                const dropdownToggleText = $dropdownToggle.text().trim();
+                const $dropdownMenuLinks = $this.find(".dropdown-menu a");
+                const dNoneClass = "d-none";
+                $dropdownMenuLinks.each(function () {
+                    const $this = $(this);
+                    if ($this.text() == dropdownToggleText) {
+                        $this.addClass(dNoneClass);
+                    } else {
+                        $this.removeClass(dNoneClass);
+                    }
+                });
+            }
+
+            function clickHandler(e) {
+                e.preventDefault();
+                const $this = $(this);
+                const index = $this.index();
+                const text = $this.text();
+                $this.closest(".dropdown").find(".dropdown-toggle").text(`${text}`);
+                $this
+                    .closest($tabsToDropdown)
+                    .find(`.nav-pills li:eq(${index}) a`)
+                    .tab("show");
+            }
+
+            function shownTabsHandler(e) {
+                // works also
+                //const $this = $(this);
+                const $this = $(e.target);
+                const index = $this.parent().index();
+                const $parent = $this.closest($tabsToDropdown);
+                const $targetDropdownLink = $parent.find(".dropdown-menu a").eq(index);
+                const targetDropdownLinkText = $targetDropdownLink.text();
+                $parent.find(".dropdown-toggle").text(targetDropdownLinkText);
+            }
+
+            $tabsToDropdown.each(function () {
+                const $this = $(this);
+                const $pills = $this.find('a[data-toggle="pill"]');
+
+                generateDropdownMarkup($this);
+
+                const $dropdown = $this.find(".dropdown");
+                const $dropdownLinks = $this.find(".dropdown-menu a");
+
+                $dropdown.on("show.bs.dropdown", showDropdownHandler);
+                $dropdownLinks.on("click", clickHandler);
+                $pills.on("shown.bs.tab", shownTabsHandler);
+            });
+
+    </script>
+{% endblock javascripts %}
