--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,39 +1,66 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Qualiservice Acceuil{% endblock %}
+{% block title %}Qualiservice{% endblock %}
 {% block stylesheets %}
 <link rel="stylesheet" href="{{ asset('css/main.css') }}"  />
 {% endblock %}
-{% block body%}
-    <div class="container" style="text-align: center; color: #E0145F;">
-        <h1>Qualiservice Livraison/Expédition</h1>
-    </div>
-    <div class="container" style="padding: 150px;">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="container">
-                    <input type="checkbox" name="calendar-button" id="calendar-button" onclick="location.href='/register'" />
-                    <label class="calendar" for="calendar-button">Création de compte</label>
-                </div>
-            </div>
-            <div class="col-md-3">
-                    <div class="container">
-                        <input type="checkbox" name="list-button" id="list-button" onclick="location.href='/login'"/>
-                        <label class="list" for="list-button">Connexion</label>
-                    </div>
-            </div>
-            <div class="col-md-3">
-                    <div class="container">
-                        <input type="checkbox" name="create-button" id="create-button" onclick="location.href='/logout'" />
-                        <label class="create" for="create-button">Déconnexion</label>
-                    </div>
-            </div>
-            <div class="col-md-3">
-                    <div class="container">
-                        <input type="checkbox" name="reset-password" id="reset-password" onclick="location.href='/reset-password'" />
-                        <label class="reset" for="reset-password">Mot de passe oublié</label>
-                    </div>
-            </div>
-        </div>
-    </div>
+{% block body%}    
+    <div id="calendrier"></div>
+    
 {% endblock%}
+{% block javascripts %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+<script>
+    window.onload = () => {
+        let calendarElt = document.querySelector("#calendrier")
+
+        let calendar = new FullCalendar.Calendar(calendarElt, {
+            initialView: 'timeGridDay',
+            locale: 'fr',
+            timeZone: 'Europe/Paris',
+            headerToolbar: {
+                start: 'prev,next, timeGridDay,list',
+                center: 'title',
+                end: 'dayGridMonth,timeGridWeek'
+            },
+            buttonText: {
+                day: 'Aujoud\'hui',
+                week: 'Semaine',
+                month: 'Mois',
+                list: 'Liste'
+            },
+            events: {{ data| raw }},
+            nowIndicator: true,
+            editable: true,
+            eventResizableFromStart: true,
+            eventObject: true
+        })
+
+    calendar.on('eventChange', (e) => {
+        let url = `/api/${e.event.id}/edit`
+        let donnees = {
+            "title": e.event.title,
+            "description": e.event.extendedProps.description,
+            "start": e.event.start,
+            "end": e.event.end,
+            "backgroundColor": e.event.backgroundColor,
+            "borderColor": e.event.borderColor,
+            "textColor": e.event.textColor,
+            "allDay": e.event.allDay
+        }
+    
+    {# calendar.addEvent(event[, let url = `/api/${e.event.id}/edit`]) #}
+
+
+        let ajaxRequest = new XMLHttpRequest();
+        ajaxRequest.open("PUT", url, true)
+        ajaxRequest.send(JSON.stringify(donnees))
+       
+    })
+
+    calendar.render()
+    }
+</script>
+
+{% endblock %}
