update calendar time_widget and add entity for choice type

--- a/templates/calendar/_form.html.twig
+++ b/templates/calendar/_form.html.twig
@@ -20,6 +20,14 @@
             </div>
         </div>
         <div class="row">
+            <div class="col md-6 clockpicker">
+                {{ form_row(form.come) }}
+            </div>
+            <div class="col md-6 clockpicker">
+                {{ form_row(form.deparure) }}
+            </div>
+        </div>
+        <div class="row">
             <div class="col md-6">
                 {{ form_row(form.building) }}
             </div>
