--- a/templates/calendar/_form.html.twig
+++ b/templates/calendar/_form.html.twig
@@ -26,6 +26,19 @@
             <div class="col md-6 clockpicker">
                 {{ form_row(form.deparure) }}
             </div>
+            {% if form.vars.data.deparure %}
+            <div class="form-group">
+                <div class="row">
+                    <div class="col md-6">
+                        <button type="submit" class="btn btn-primary" name="send_mail">Envoyer mail</button>
+                    </div>
+                </div>
+            </div>
+            {% else %}
+            <div style="display: none;">
+                <button type="submit" class="btn btn-primary" name="send_mail">Envoyer mail</button>
+            </div>
+            {% endif %}
         </div>
         <div class="row">
             <div class="col md-6">
