--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -14,6 +14,10 @@
                 <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="/calendar/view" role="tab"
                     aria-controls="pills-contact" aria-selected="false">planning</a>
             </li>           
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="/driver" role="tab"
+                    aria-controls="pills-contact" aria-selected="false">planning Caristes</a>
+            </li>           
         </ul>        
     </div>
 
