--- a/templates/driver/index.html.twig
+++ b/templates/driver/index.html.twig
@@ -5,53 +5,6 @@
 <link rel="stylesheet" href="{{ asset('css/driver.css') }}" />
 {% endblock %}
 {% block body %}
-<div class="accordion" id="accordionExample">
-    {% for driver in drivers %}
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            {{driver.name}}
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>date</th>
-                        <th>Nbr de palettes</th>
-                        <th>Temps de déchargement estimé</th>
-                        <th>Type</th>
-                        <th>Marchandises</th>
-                        <th>Client</th>
-                        <th>Fournisseur</th>
-                        <th>Bâtiment</th>
-                        <th>Quai</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for event in events %}
-                        {% if event.driver == driver.name %}
-                        <tr>
-                            <td>{{ event.start }}</td>
-                            <td>{{ event.pallets_number }}</td>
-                            <td>{{ event.time }}</td>
-                            <td>{{ event.title }}</td>
-                            <td>{{ event.description }}</td>
-                            <td>{{ event.customer }}</td>
-                            <td>{{ event.supplier }}</td>
-                            <td>{{ event.building }}</td>
-                        </tr>
-                        {% endif%}
-                    {% endfor %}
-                </tbody>
-            </table>
-            <a href="{{ path('app_driver_pdf', {'id': driver.id}) }}" class="btn btn-primary" onclick="printTable()" >Imprimer </a>
-        </div>
-      </div>  
-    </div>
-    {% endfor %}
-</div>
 <div class="card-deck">
     {% for driver in drivers %}
         <div class="card">
@@ -83,6 +36,7 @@
                                 <td>{{ event.customer }}</td>
                                 <td>{{ event.supplier }}</td>
                                 <td>{{ event.building }}</td>
+                                <td>{{ event.dock }}</td>
                             </tr>
                             {% endif%}
                         {% endfor %}
@@ -98,7 +52,6 @@
     <script>
         function printTable() {
             window.print();
-        }
-
+        }        
     </script>
 {% endblock %}
