--- a/public/css/driver.css
+++ b/public/css/driver.css
@@ -26,6 +26,36 @@ tr:hover {
     border: 1px solid #ccc;
     background-color: #f1f1f1;
   }
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
   .card-header {
     font-size: 25px;
     color: rgb(242, 242, 248);
