--- a/public/css/reset_password.css
+++ b/public/css/reset_password.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
 /* BASIC */
-
+body {
+  background: radial-gradient(ellipse farthest-corner,
+      rgb(148, 175, 233), rgb(27, 73, 133) 10%, #251baa 50%, rgb(9, 2, 110));
+} 
 html {
   background-color: #56baed;
 }
