--- a/templates/calendar/edit.html.twig
+++ b/templates/calendar/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('css/calendarView.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/calendar_form.css') }}" />
 {% endblock %}
 {% block title %}Edit Calendar{% endblock %}
 
@@ -8,15 +8,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h1>Modification</h1>
-                <a class="btn btn-info" href="{{ path('app_calendar') }}">Retour au calendrier</a>
+                <h1 class="brand-title">Modification</h1>
+                <button class="blue" type="button" onclick="window.location.href='/calendar/view'">Retour au calendrier</button>
                 {{ include('calendar/_form.html.twig', {'button_label': 'Enregistrer'}) }}
             </div>
-            <div class="col-md-6">
-                {{ include('calendar/_delete_form.html.twig') }}
-            </div>
         </div>
-
-
+        <div class="row">
+            {{ include('calendar/_delete_form.html.twig') }}
+        </div>
     </div>
 {% endblock %}
