--- a/public/css/driver.css
+++ b/public/css/driver.css
@@ -1,8 +1,10 @@
 body {
-    background: #fafafa url(https://jackrugile.com/images/misc/noise-diagonal.png);
+    background: #fafafa ;
     color: #444;
     font: 100%/30px 'Helvetica Neue', helvetica, arial, sans-serif;
     text-shadow: 0 1px 0 #fff;
+    margin-top: 50px;
+    margin-bottom: 70px;
 }
 
 strong {
