--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,76 +1,122 @@
-:root {
-    --qualiBlue: #1A428E;
-    --white: #fff;
-}
-
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body,
-.tabs-to-dropdown .dropdown-toggle,
-.tabs-to-dropdown .dropdown-item {
-    font-size: 1.3rem;
+nav {
+    right: 0;
+    left: 0;
+    width: 50%;
+    display: table;
+    margin: 0 auto;
+    transform: translateY(-50%);
 }
 
-.tabs-to-dropdown .nav-wrapper {
-    padding: 15px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.12);
+nav a {
+    position: relative;
+    /* width: 33.333%; */
+    display: table-cell;
+    text-align: center;
+    color: #949494;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    padding: 10px 20px;
+    transition: 0.2s ease color;
 }
 
-.tabs-to-dropdown .nav-wrapper a {
-    color: var(--qualiBlue);
+nav a:before,
+nav a:after {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 0.2s ease transform;
 }
 
-.tabs-to-dropdown .nav-pills .nav-link.active {
-    background-color: var(--qualiBlue);
+nav a:before {
+    top: 0;
+    left: 10px;
+    width: 6px;
+    height: 6px;
 }
 
-.tabs-to-dropdown .nav-pills li:not(:last-child) {
-    margin-right: 30px;
+nav a:after {
+    top: 5px;
+    left: 18px;
+    width: 10px;
+    height: 10px;
 }
 
-.tabs-to-dropdown .tab-content .container-fluid {
-    max-width: 1250px;
-    padding-top: 30px;
-    padding-bottom: 20px;
+nav a:nth-child(1):before {
+    background-color: yellow;
 }
 
-.tabs-to-dropdown .dropdown-menu {
-    border: none;
-    box-shadow: 0px 5px 14px rgba(0, 0, 0, 0.08);
+nav a:nth-child(1):after {
+    background-color: red;
 }
 
-.tabs-to-dropdown .dropdown-item {
-    padding: 14px 28px;
+nav a:nth-child(2):before {
+    background-color: #00e2ff;
 }
 
-.tabs-to-dropdown .dropdown-item:active {
-    color: var(--white);
+nav a:nth-child(2):after {
+    background-color: #89ff00;
 }
 
-@media (min-width: 1280px) {
-    .tabs-to-dropdown .nav-wrapper {
-        padding: 15px 30px;
-    }
+nav a:nth-child(3):before {
+    background-color: purple;
 }
 
-
-/* FOOTER STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-footer {
-    position: fixed;
-    right: 15px;
-    bottom: 20px;
-    display: flex;
-    align-items: center;
-    font-size: 1rem;
-    padding: 5px;
-    background: var(--white);
+nav a:nth-child(3):after {
+    background-color: palevioletred;
+}
+nav a:nth-child(4):before {
+    background-color: #00e2ff;
 }
 
-.page-footer a {
-    margin-left: 4px;
+nav a:nth-child(4):after {
+    background-color: yellow;
+}
+
+#indicator {
+    position: absolute;
+    left: 5%;
+    bottom: 0;
+    width: 30px;
+    height: 2px;
+    background-color: rgb(182, 177, 177);
+    border-radius: 5px;
+    transition: 0.2s ease left;
+}
+
+nav a:hover {
+    color: rgb(172, 168, 168);
+    font-weight: bold;
+    font-size: 30px;
+}
+
+nav a:hover:before,
+nav a:hover:after {
+    transform: scale(1);
+}
+
+nav a:nth-child(1):hover~#indicator {
+    background: linear-gradient(130deg, yellow, red);
+}
+
+nav a:nth-child(2):hover~#indicator {
+    left: 34%;
+    background: linear-gradient(130deg, #00e2ff, #89ff00);
+}
+
+nav a:nth-child(3):hover~#indicator {
+    left: 70%;
+    background: linear-gradient(130deg, purple, palevioletred);
+}
+nav a:nth-child(4):hover~#indicator {
+    left: 70%;
+    background: linear-gradient(130deg, #00e2ff, yellow);
 }
