--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{{ asset('css/nav.css') }}" />
 {% endblock %}
 {% block navbar %}
-<div class="tabs-to-dropdown">
+{# <div class="tabs-to-dropdown">
     <div class="nav-wrapper d-flex align-items-center justify-content-between">
         <ul class="nav nav-pills d-none d-md-flex" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
@@ -12,11 +12,15 @@
             </li>
             <li class="nav-item" role="presentation">
                 <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="/calendar/view" role="tab"
-                    aria-controls="pills-contact" aria-selected="false">planning</a>
+                    aria-controls="pills-contact" aria-selected="false">Planning</a>
             </li>           
             <li class="nav-item" role="presentation">
                 <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="/driver" role="tab"
-                    aria-controls="pills-contact" aria-selected="false">planning Caristes</a>
+                    aria-controls="pills-contact" aria-selected="false">Planning Caristes</a>
+            </li>           
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="/admin" role="tab"
+                    aria-controls="pills-contact" aria-selected="false">Configurations</a>
             </li>           
         </ul>        
     </div>
@@ -50,97 +54,15 @@
         <img width="24" height="24" src="https://assets.codepen.io/162656/george-martsoukos-small-logo.svg"
             alt="George Martsoukos logo">
     </a>
-</footer>
+</footer> #}
+
+    <nav class="navMenu">
+        <a href="/">Acceuil</a>
+        <a href="/calendar/view">Planning</a>
+        <a href="/driver">Planning Caristes</a>
+        <a href="/admin">Configuration</a>
+        <div class="dot"></div>
+    </nav>
 {% endblock navbar %}
 
-{% block javascripts %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script>
-        window.onload = () => {
-            const $tabsToDropdown = $(".tabs-to-dropdown");
 
-                function generateDropdownMarkup(container) {
-                    const $navWrapper = container.find(".nav-wrapper");
-                    const $navPills = container.find(".nav-pills");
-                    const firstTextLink = $navPills.find("li:first-child a").text();
-                    const $items = $navPills.find("li");
-                    const markup = `
-        <div class="dropdown d-md-none">
-        <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            ${firstTextLink}
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
-            ${generateDropdownLinksMarkup($items)}
-        </div>
-        </div>
-    `;
-                    $navWrapper.prepend(markup);
-                }
-
-                function generateDropdownLinksMarkup(items) {
-                    let markup = "";
-                    items.each(function () {
-                        const textLink = $(this).find("a").text();
-                        markup += `<a class="dropdown-item" href="#">${textLink}</a>`;
-                    });
-
-                    return markup;
-                }
-
-                function showDropdownHandler(e) {
-                    // works also
-                    //const $this = $(this);
-                    const $this = $(e.target);
-                    const $dropdownToggle = $this.find(".dropdown-toggle");
-                    const dropdownToggleText = $dropdownToggle.text().trim();
-                    const $dropdownMenuLinks = $this.find(".dropdown-menu a");
-                    const dNoneClass = "d-none";
-                    $dropdownMenuLinks.each(function () {
-                        const $this = $(this);
-                        if ($this.text() == dropdownToggleText) {
-                            $this.addClass(dNoneClass);
-                        } else {
-                            $this.removeClass(dNoneClass);
-                        }
-                    });
-                }
-
-                function clickHandler(e) {
-                    e.preventDefault();
-                    const $this = $(this);
-                    const index = $this.index();
-                    const text = $this.text();
-                    $this.closest(".dropdown").find(".dropdown-toggle").text(`${text}`);
-                    $this
-                        .closest($tabsToDropdown)
-                        .find(`.nav-pills li:eq(${index}) a`)
-                        .tab("show");
-                }
-
-                function shownTabsHandler(e) {
-                    // works also
-                    //const $this = $(this);
-                    const $this = $(e.target);
-                    const index = $this.parent().index();
-                    const $parent = $this.closest($tabsToDropdown);
-                    const $targetDropdownLink = $parent.find(".dropdown-menu a").eq(index);
-                    const targetDropdownLinkText = $targetDropdownLink.text();
-                    $parent.find(".dropdown-toggle").text(targetDropdownLinkText);
-                }
-
-                $tabsToDropdown.each(function () {
-                    const $this = $(this);
-                    const $pills = $this.find('a[data-toggle="pill"]');
-
-                    generateDropdownMarkup($this);
-
-                    const $dropdown = $this.find(".dropdown");
-                    const $dropdownLinks = $this.find(".dropdown-menu a");
-
-                    $dropdown.on("show.bs.dropdown", showDropdownHandler);
-                    $dropdownLinks.on("click", clickHandler);
-                    $pills.on("shown.bs.tab", shownTabsHandler);
-                });
-    }
-    </script>
-{% endblock javascripts %}
