--- a/templates/calendar/show.html.twig
+++ b/templates/calendar/show.html.twig
@@ -1,70 +1,20 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+<link rel="stylesheet" href="{{ asset('css/calendar_form.css') }}" />
+{% endblock %}
 
-{% block title %}Calendar{% endblock %}
+{% block title %}Visualisation{% endblock %}
 
 {% block body %}
-    <h1>Calendar</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1 class="brand-title">Visualisation</h1>
+            <button class="blue" type="button" onclick="window.location.href='/calendar/view'">Retour au
+                calendrier</button>
+            {{ include('calendar/_form.html.twig')}}
+        </div>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ calendar.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ calendar.title }}</td>
-            </tr>
-            <tr>
-                <th>Start</th>
-                <td>{{ calendar.start ? calendar.start|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>End</th>
-                <td>{{ calendar.end ? calendar.end|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ calendar.description }}</td>
-            </tr>
-            <tr>
-                <th>All_day</th>
-                <td>{{ calendar.allDay ? 'Yes' : 'No' }}</td>
-            </tr>           
-            <tr>
-                <th>nombre de palettes</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-            <tr>
-                <th>Bâtiment</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-            <tr>
-                <th>Client</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-            <tr>
-                <th>Fournisseur</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-            <tr>
-                <th>Cariste</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-            <tr>
-                <th>Marchandise</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-            <tr>
-                <th>Commentaire</th>
-                <td>{{ calendar.textColor }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('calendar_index') }}">back to list</a>
-
-    <a href="{{ path('calendar_edit', {'id': calendar.id}) }}">edit</a>
-
-    {{ include('calendar/_delete_form.html.twig') }}
+</div>
 {% endblock %}
