clean login et registration view

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -9,9 +9,9 @@
     {% include "./partials/_navbar.html.twig" %}
 {% endblock navbar %}
 <div class="container">
-    {% for message in app.flashes('message') %}
+    {# {% for message in app.flashes('message') %}
     <div class="flash-message">{{ message }}</div>
-    {% endfor %}
+    {% endfor %} #}
     <div class="row">
 
         <div class="col-md-12" id="calendar"></div>
