--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -14,9 +14,10 @@
         {% endif %}
         <div class="dot"></div>
         {% if app.user %}
-        <a class='btn btn-danger' href="{{ path('app_logout') }}">Déconnexion</a>
-        {% else %}
-        <a class="btn btn-success" href="{{ path('app_login') }}">Connexion</a>
+        Bienvenue, {{ app.user.userIdentifier }}, <a class="btn btn-danger"
+            href="{{ path('app_logout') }}">Déconnexion</a>
+        {# {% else %}
+        <a class="btn btn-success" href="{{ path('app_login') }}">Connexion</a> #}
         {% endif %}
     </nav>
 {% endblock navbar %}
