--- a/templates/calendar/_form.html.twig
+++ b/templates/calendar/_form.html.twig
@@ -78,6 +78,14 @@
                 <div class="col md-6">
                     {{ form_row(form.text_color, { 'attr': {'class': 'txt-color'} }) }}
                 </div>
+                <div class="row">
+                    <div class="col md-2">
+                        {{ form_row(form.checked, { 'attr': {'class': 'checked'}}) }}
+                    </div>
+                    <div class="col md-6">
+                        {{ form_row(form.speed_save, { 'attr': {'class': 'speedSave'}}) }}
+                    </div>
+                </div>
             </div>
     </div>
     {% if app.user and 'ROLE_ADMIN' in app.user.roles %}
