add check and validate date and name

--- a/templates/calendar/_form.html.twig
+++ b/templates/calendar/_form.html.twig
@@ -83,7 +83,7 @@
                         {{ form_row(form.checked, { 'attr': {'class': 'checked'}}) }}
                     </div>
                     <div class="col md-2">
-                        {{ form_row(form.validated_by, { 'attr': {'class': 'validated'}}) }}
+                        {{ form_row(form.validated, { 'attr': {'class': 'validated'}}) }}
                     </div>
                     <div class="col md-6">
                         {{ form_row(form.speed_save, { 'attr': {'class': 'speedSave'}}) }}
