--- a/templates/calendar/edit.html.twig
+++ b/templates/calendar/edit.html.twig
@@ -47,7 +47,7 @@
                             {{ form_row(form.logistic_leader) }}
                         </div>
                         <div class="col md-4">
-                            {{ form_row(form.validated_by, { 'attr': { 'autocomplete': 'off' } }) }}
+                            {{ form_row(form.validated, { 'attr': { 'autocomplete': 'off' } }) }}
                         </div>
                         
                     </div>
